objects/ssot__PartyPhilanthropicAssessment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentOrganizationId__c</fullName>
        <label>Assessment Organization</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentType__c</fullName>
        <label>Assessment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetLiquidationValueAmount__c</fullName>
        <label>Asset Liquidation Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AttributedUserId__c</fullName>
        <label>Attributed User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessOwnershipValueAmount__c</fullName>
        <label>Business Ownership Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExtendedSummaryText__c</fullName>
        <label>Extended Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GivingLevel__c</fullName>
        <label>Giving Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationCohort__c</fullName>
        <label>Graduation Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationStatus__c</fullName>
        <label>Graduation Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Philanthropic Assessment  Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeAmount__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherAssetsValueAmount__c</fullName>
        <label>Other Assets Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OtherNonprofitGiftAmount__c</fullName>
        <label>Other Nonprofit Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OtherNonprofitGiftCount__c</fullName>
        <label>Other Nonprofit Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OverallRating__c</fullName>
        <label>Overall Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyPhilanthropicRsrchPrflId__c</fullName>
        <label>Party Philanthropic Research Profile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RealEstateValueAmount__c</fullName>
        <label>Real Estate Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchEndDate__c</fullName>
        <label>Research End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchHours__c</fullName>
        <label>Research Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchSharedDate__c</fullName>
        <label>Research Shared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStartDate__c</fullName>
        <label>Research Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ResponsiblePersonId__c</fullName>
        <label>Responsible Person</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetirementSavingsAmount__c</fullName>
        <label>Retirement Savings Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShortSummaryText__c</fullName>
        <label>Short Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StockValueAmount__c</fullName>
        <label>Stock Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StrengthsAndOpportunitiesDescription__c</fullName>
        <label>Strengths and Opportunities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WeaknessesAndDrawbacksDescription__c</fullName>
        <label>Weaknesses and Drawbacks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WealthAmount__c</fullName>
        <label>Wealth Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039801618_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicAssessment_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicAssessment_Account_rel</relationshipLabel>
        <relationshipName>rel_1731039801618_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039805600_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicAssessment_Assessm_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicAssessment_Assessm_rel</relationshipLabel>
        <relationshipName>rel_1731039805600_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040462192_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicAssessment_Contact_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicAssessment_Contact_rel</relationshipLabel>
        <relationshipName>rel_1731040462192_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>